@@ -1,5 +1,11 @@
 # Version 0.7
 
+* Allow blocks with arity 0 or -1 to be given as the redirect url:
+
+    def destroy
+      destroy!{ project_url(@project) }
+    end
+
 * Allow interpolation_options to be set in the application controller.
 * Added has_scope to controller (an interface for named_scopes).
 * Added polymorphic_belongs_to, optional_belongs_to and singleton_belongs_to
